--- a/index.html
+++ b/index.html
@@ -13,6 +13,26 @@
 
 	<link rel="stylesheet" type="text/css" href="css/stylebanner.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="css/base.css" media="screen" />
+	<style type="text/css">
+           .uls{
+   	           margin-top: 25%;
+               text-align: center;
+               height: 150px;
+           }
+           .uls span{
+           	    padding-right: 80px;
+           }
+           .uls span img{
+           	    margin-top: 15%;
+           	    position: absolute;
+           }
+           .uls span i{
+           	    font-size: 20px;
+           	    position: relative;
+           	    top: 265px;
+                left: 0px;
+           }
+	</style>
 </head>
 <body>
 	<div class="swiper-container">
@@ -40,25 +60,6 @@
 			</div>
 		<div class="swiper-wrapper">
 			<div class="swiper-slide">
-				<!-- <div class="d-1225">
-					<div class="d-login disN">
-						<h3>快&nbsp速&nbsp申&nbsp请</h3>
-						<div class="d-login-div">
-							<input type="text" placeholder="请选择所在区域">
-						</div>
-						<div  class="d-login-div">
-							<input type="text" placeholder="请选择产品类别">
-						</div>
-						<div  class="d-login-div">
-							<input type="text" placeholder="请输入手机号">
-						</div>
-						<div  class="d-login-div iover">
-							<input type="text" placeholder="请输入验证码" class="d-input-s">
-							<span class="d-login-div-span">获取验证码</span>
-						</div>
-						<button class="d-submit">提&nbsp&nbsp&nbsp&nbsp&nbsp交</button>
-					</div>
-				</div> -->
 				<section class="mainTop clearfix">
 					<div class="scrollBar">
 					   <div id="Banner" class="banner">
@@ -127,29 +128,25 @@
 			</div>
 			<div class="swiper-slide d-bg2">
 				<div class="d-1225">
-					<img src="img/toumingshoufei.png" alt="" class="d-bg2-txtimg posi disN">
-					<div class="d-bg2-crile d-bg2-crile2 disN posi">
-						<img src="img/yuangong.png" alt="">
-					</div>
-					<div class="d-bg2-crile1 disN posi">
-						<div class="d-bg2-crile">
-							<img src="img/fangzu.png" alt="">
-						</div>
-						<div class="d-bg2-crile-bg"></div>
-					</div>
-					
-					<div class="d-bg2-txt1 posi disN">
-						<div class="d-bg2-txt-1">银行经营贷居间服务
-							<!-- <span>银行·信托·小贷</span> -->
-						</div>
-						<div class="d-txt-btn">费率2%/次</div>
-					</div>
-					<div class="d-bg2-txt2 posi disN">
-						<div class="d-bg2-txt-1">银行信用贷居间服务
-							<!-- <span>银行·小贷</span> -->
-						</div>
-						<div class="d-txt-btn">5000元/次</div>
-					</div>
+					<img src="img/toumingshoufei.png" alt="" class="d-bg2-txtimg posi disN" style="right: 7%;">	
+					<ul class="d-bg2-txtimg disN uls banText">
+						<span>
+							<img src="img/caifu.png" alt="" width="70px" height="auto"/>
+							<i style="font-size: 18px;">财富管理</i>
+						</span>
+						<span>
+							<img src="img/touzi.png" alt="" width="70px" height="auto"/>
+							<i style="font-size: 18px;">投资咨询</i>
+						</span>
+						<span>
+							<img src="img/xiangmu.png" alt=""  width="70px" height="auto"/>
+							<i style="font-size: 18px;">项目管理</i>
+						</span>
+						<span>
+							<img src="img/zichan.png" alt=""  width="70px" height="auto"/>
+							<i style="font-size: 18px;">资产配置</i>
+						</span>
+					</ul>
 				</div>
 			</div>
 			<div class="swiper-slide d-bg3">
@@ -218,14 +215,6 @@
 						</div>
 					</div>
 				</div>
-				<!-- <div class="d-1225-imgBg">
-					<img src="img/zhuanye.png" alt="" class="d-bg4-txtimg1 disN">
-					<img src="img/zhuanye2.png" alt="" class="d-bg4-txtimg1 d-bg4-txtimg12 disN">
-					<div class="indexS4Bg">
-						<img src="img/qingsong.png" alt="" class="d-bg4-txtimg2 disN">
-						<img src="img/qingsongsan1.png" alt="" class="d-bg4-txtimg2 d-bg4-txtimg22 disN">
-					</div>
-				</div> -->
 				<div class="d-1225">
 					<img src="img/guanyu.png" alt="" class="d-bg3-txtimg d-newbg4-txtimg posi disN">
 					<div class="d-new-bg4-div">
